Spurious SNA assertion failed
Fatal server error: [ 461.108] (EE) sna_accel_flush:17413 assertion '!ret || priv->gpu_bo == NULL' failed
Why would one assert false return from a function? This assertion looks spurious. It should be assert(ret || priv->gpu_bo == NULL).
I am attaching Xorg.7.log.xz with full debugging enabled here. It was found while investigating segfaults that surfaced due to apparently broken gcc pre-release. The segfaults went away but the failed assertion did not.
Edited by Alexei Podtelezhnikov