sna: Forcibly relinquish the GPU bo cache of a SHM pixmap on flushing

Before we indicate return control of the SHM Pixmap to the client (that
is prior to the next XReply), we ensure that the original SHM buffer is
uptodate with any changes made on the GPU. We must flush the GPU writes
back to the CPU and so not allow ourselves to keep the dirty cache of
the GPU bo.

Closes: https://gitlab.freedesktop.org/xorg/driver/xf86-video-intel/-/issues/189
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Cc: Alexei Podtelezhnikov <apodtele@gmail.com>
Tested-by: Alexei Podtelezhnikov <apodtele@gmail.com>